<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_download"
        android:title="@string/logs_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/logs_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_scroll_bottom"
        android:icon="@drawable/ic_expand_more"
        android:title="@string/logs_scroll_bottom"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/ic_eraser"
        android:title="@string/logs_clear"
        app:showAsAction="ifRoom" />

</menu>
