<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="16dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv_current_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="14sp" />

    <cn.classfun.droidvm.ui.widgets.row.TextInputRowWidget
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/disk_set_format_name"
        android:inputType="text" />

    <cn.classfun.droidvm.ui.widgets.row.ChooseRowWidget
        android:id="@+id/choose_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_disk_format"
        android:text="@string/disk_set_format_target" />

    <cn.classfun.droidvm.ui.widgets.row.ChooseRowWidget
        android:id="@+id/choose_compress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_compress"
        android:text="@string/disk_create_compress"
        android:visibility="gone" />

</LinearLayout>
